# poetry2nix-test

./: .gitignore  Makefile  README.md  flake.nix  pyproject.toml
.github/workflows/: build.yaml
my_package/: __main__.py
